Разработка настройки списка секретаря, добавление Квалификации и Формы обучения

--- a/src/main/resources/static/Templates/arrangeCertification.html
+++ b/src/main/resources/static/Templates/arrangeCertification.html
@@ -90,9 +90,9 @@
                     </div>
                 </div>
                 <div class="col-md-8 mx-auto pl-1 mt-4">
-                    <label for="labelDeadline">Дедлайн</label>
+                    <label for="labelDeadline">Крайний срок</label>
                     <i class="fa fa-info-circle text-info" title="Нажмите для вывода справки" ng-click="toasterInfo('Справка!',
-                    'Крайняя дата внесения изменений(преподаватель сможет вносить изменения до 03.00 мск)')"></i>
+                    'Крайний срок внесения изменений (преподаватель сможет вносить изменения до 01.00 мск)')"></i>
                     <div class="input-group mb-3">
                         <input type="date"
                                class="form-control"
@@ -110,7 +110,7 @@
                         <div class="input-group-append">
                             <a class="btn btn-info px-4 text-white"
                                ng-click="createCertification()">
-                                Создать ведомость
+                                Добавить аттестацию
                             </a>
                         </div>
                     </div>
