--- a/src/main/resources/static/Templates/contentAttestation.html
+++ b/src/main/resources/static/Templates/contentAttestation.html
@@ -44,7 +44,7 @@
                    type="button"
                    ng-click="replyAll()">
                    <i class=" fa fa-reply-all"></i>
-                    Откатить изменения
+                    Отменить изменения
                 </button>
                 <button class="btn btn-info text-white"
                    type="button"
