--- a/src/main/resources/static/Templates/help.html
+++ b/src/main/resources/static/Templates/help.html
@@ -97,8 +97,8 @@
             <br>
             На данной странице есть возможность<br>
             просмотреть содержимое (под)группы,<br>
-            а также по каждой дисциплине<br>
-            выбрать преподавателя для неё.
+            а также выбрать преподавателя<br>
+            по каждой дисциплине.
             <br>
         </div>
 
