--- a/src/main/resources/static/Templates/help.html
+++ b/src/main/resources/static/Templates/help.html
@@ -38,7 +38,7 @@
 
         <div class="text-center ng-hide" ng-show="ur == 'DEANERY'">
             <br>
-            Для обозначения<br>
+            Для того чтобы отметить<br>
             отчисленных студентов необходимо<br>
             перейти в раздел
             <a class="bold text-info" ui-sref="students">
