--- a/src/main/resources/static/Templates/subject.html
+++ b/src/main/resources/static/Templates/subject.html
@@ -5,42 +5,7 @@
         <li class="breadcrumb-item active" aria-current="page">Список предметов</li>
     </ol>
 
-    <!--<div class="my-3 col-md-10 card bg-light mx-auto">
-        <form class="simple-form" name="medicine">
-            <div class="row my-3 pl-5">
-                <div class="col-md-4 text-center ml-5 pl-3">
-                    <label for="MedicineName">Наименование</label>
-                    <input type="text"
-                           class="form-control"
-                           name="name"
-                           ng-model="name"
-                           id="MedicineName"
-                           placeholder="введите название лекарства"
-                           required>
-                </div>
-
-                <div class="col-md-4 text-center ml-3">
-                    <label for="MedicineGroup">Группа</label>
-                    <select class="custom-select form-control"
-                            name="group"
-                            ng-model="group"
-                            id="MedicineGroup">
-                        <option value="{{item.id}}" ng-repeat="item in groups">{{item.name}}</option>
-                    </select>
-                </div>
-                <div class="col-md-2 mx-auto mt-4 pt-2">
-                    &lt;!&ndash;<a class="btn text-info" href="/home">
-                        В главное меню
-                    </a>&ndash;&gt;
-                    <a class="btn btn-info px-4 text-white"
-                       ng-click="findMedicines()">
-                        Найти
-                    </a>
-                </div>
-            </div>
-        </form>
-    </div>-->
-
+    <!-- Оставить заявку!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
 
     <!--Группы       Последние изменения были сделаны (дата)-->
     <!--Подгруппы    Внимание! Ведомость не заполнена.-->
