--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,32 +7,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Личный кабинет преподавателей</title>
 
-    <script src="Libs/angularjs/angular.min.js"></script>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>-->
-    <!--<script src="Libs/request"></script>-->
 
-    <script src="https://use.fontawesome.com/7328c42f01.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/3.0.0/toaster.min.css" rel="stylesheet" />
-    <script src="Libs/angularjs/angular-animate.min.js" ></script>
-    <!--<script src="https://code.angularjs.org/1.8.0/angular-animate.min.js" ></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/3.0.0/toaster.min.js"></script>
-    <script src="Libs/angularjs/ui-router/release/angular-ui-router.min.js"></script>
+    <script src="Libs/angularjs/angular.min.js"></script> <!-- 1.8.0 -->
 
-    <!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.1.js"></script>-->
-    <!--<script src="Libs/angularjs/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>-->
 
-    <script src="Controllers/app.js"></script>
-    <!-- не использовалось <script th:src="@{Controllers/app.js}"></script>-->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.6/ui-bootstrap.js" integrity="sha512-3z5zbCPEG7DvKKz46yvPmKL+w+UDfwY0f2YWFVIwBb+2Y4E23jTZHZxG+naAiTllvMNQAhapPDKGHBT7V3fQOA==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.6/ui-bootstrap-tpls.js" integrity="sha512-Re9KhAaoh5qo/Cm/wtExVs7ETTKTx/81aXPHko2nWlUvTzELYhTwpp/DwUu+z8ul+DjtbJdPcmxEYwKewzG62w==" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.6/ui-bootstrap-csp.css" integrity="sha512-TSigfdiJq7G9AWJnE/8D3M/HcBs9wfKpbrCbMg4iSs8IRVujA854B5wd/glfPzBRaeqiLLz1jHm6swYsci2txQ==" crossorigin="anonymous" />
+
+
     <link href="Styles/main.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/3.0.0/toaster.min.css" rel="stylesheet"/>
+
+    <!-- ui-select files -->
+    <link rel="stylesheet" href="Libs/angularjs/select.css">
+    <link rel="stylesheet" href="Libs/select2-3.4.5/select2.css">
 
 </head>
 <body ng-app="app" ng-controller="AppController">
 
     <toaster-container></toaster-container>
     <!--<toaster-container toaster-options="{'close-button':false, 'time-out':{ 'toast-warning': 2000, 'toast-error': 0 } }"></toaster-container>-->
-
     <!--<button ng-click="toaster()">Show a Toaster</button>-->
+
+    <div ng-controller="ModalController">
+        <script type="text/ng-template" id="modalTemplate.html">
+            <div class="modal-header" ng-show="!config.noHeader"><a class="close" href="#" ng-click="close()">×</a>
+                <h3>Капитальный Ремонт</h3>
+            </div>
+            <div class="modal-body" ng-bind-html="config.body"></div>
+            <div class="modal-footer" ng-show="!config.noFooter">
+                <button ng-repeat="(ind, button) in config.buttons" class="btn {{button.cls}}" ng-click="button.click()">
+                    {{ button.text }}
+                </button>
+            </div>
+        </script>
+    </div>
+
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container menu">
@@ -146,13 +159,28 @@
         </div>
     </footer>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+
+
+
+
+<script src="https://use.fontawesome.com/7328c42f01.js"></script>
+<script src="Libs/angularjs/angular-animate.min.js"></script>
+    <!--<script src="https://code.angularjs.org/1.8.0/angular-animate.min.js" ></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/3.0.0/toaster.min.js"></script>
+<script src="Libs/angularjs/ui-router/release/angular-ui-router.min.js"></script>
+    <!-- ui-select files -->
+<script src="Libs/angularjs/select.js"></script>
+<script src="Libs/angularjs/angular-sanitize.js"></script>
+
+
+<!-- Optional JavaScript --> <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
+
+    <script src="Controllers/app.js"></script>
+    <!-- не использовалось <script th:src="@{Controllers/app.js}"></script>-->
     <!--<script src="Controllers/Home.js"></script>-->
     <script src="Controllers/Help.js"></script>
 
